add form addAdmin

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -315,7 +315,7 @@
             </a>
         </li>
                         <li>
-            <a href="javascript:;" onclick="goTo('addAdmin.html', '')">
+            <a href="{{ url('addAdmin') }}">
                 <span>Add Administrator</span>
                 <i class="fa fa-user"></i>
             </a>
